# parallel_lift

./: .gitignore  LICENSE  NOTICE  README.md
benchmarks/: RTX5090_BENCHMARK_RESULTS.md  compare_all_baselines.py  compare_flint_gpu.py  compare_gpu_crt.py  compare_hensel.py  compare_v2_final.py  compare_v2_iml.py  flint_bench  flint_bench.c  generate_latex_tables.py  iml_bench  iml_bench.c  run_cuda_benchmarks.sh  run_metal_benchmarks.sh  run_official_benchmarks.sh  v2_analysis.py
circuits/: batch_merkle.circom  batch_merkle.r1cs  ecdsa_verify.circom  ecdsa_verify.r1cs  merkle_tree.circom  merkle_tree.r1cs  multiplier.circom  poseidon_hash.circom  poseidon_hash.r1cs  range_proof.circom  range_proof.r1cs  sha256_round.circom  sha256_round.r1cs
datasets/: golden_determinants.csv  golden_solves.csv  test_vectors.json
paper_results/: V2_IMPLEMENTATION_SUMMARY.md  all_baselines_comparison.csv  crt_reconstruction.csv  determinant_cpu.csv  determinant_gpu.csv  flint_baseline.csv  flint_gpu_comparison.csv  full_pipeline.csv  gpu_crt_comparison.csv  gpu_multi_rhs_baseline.csv  hensel_analysis.csv  hensel_benchmark.csv  iml_baseline.csv  inverse_cpu.csv  inverse_gpu.csv  multi_rhs_scaling_n.csv  multi_rhs_scaling_n_cpu.csv  rtx5090_gpu_crt.csv  rtx5090_gpu_full.csv  rtx5090_hensel.csv  rtx5090_summary.csv  sparse_dense.csv  sparsity_benchmark.csv  system_info.txt  transfer_timing_rtx5090.csv  v2_benchmark.csv  v2_benchmark_corrected.csv  v2_benchmark_final.csv  v2_final_analysis.csv  v2_gpu_crt_benchmark.csv  v2_vs_iml_comparison.csv  zk_merkle_cpu.csv  zk_merkle_gpu.csv  zk_range_gpu.csv
rust/: Cargo.toml
rust/crates/parallel_lift_cli/: Cargo.toml
rust/crates/parallel_lift_cli/src/: adaptive_bench.rs  benchmark.rs  gpu_crt_bench.rs  hensel_bench.rs  lll_bench.rs  main.rs  pipeline_bench.rs  r1cs_bench.rs  scenarios.rs  sparse_bench.rs  sweep.rs  v2_bench.rs
rust/crates/parallel_lift_core/: Cargo.toml
rust/crates/parallel_lift_core/src/: adaptive.rs  backend.rs  crt.rs  determinant.rs  fhe_bridge.rs  lib.rs  matrix.rs  pipeline.rs  primes.rs  r1cs.rs  rational.rs  solve.rs  solve_hensel.rs  solve_v2.rs  sparse.rs
rust/crates/parallel_lift_core/src/lattice/: basis.rs  gram_schmidt.rs  lll.rs  mod.rs
rust/crates/parallel_lift_cuda/: Cargo.toml  build.rs
rust/crates/parallel_lift_cuda/src/: cuda_backend.rs  error.rs  fhe_gpu.rs  lib.rs
rust/crates/parallel_lift_cuda/src/kernels/: all_kernels.cu  crt.cu  crt_reconstruct.cu  determinant.cu  modular_ops.cuh  solve.cu  sparse.cu
rust/crates/parallel_lift_metal/: Cargo.toml
rust/crates/parallel_lift_metal/src/: gpu_wiedemann.rs  lib.rs  metal_backend.rs  multi_gpu.rs  shaders.rs
rust/results/: BENCHMARK_SUMMARY.md  GPU_CRT_BENCHMARK.md  GPU_FULL_PIPELINE_BENCHMARK.md  GPU_LLL_STATUS.md  benchmark_report.md  determinant_benchmark.txt  gpu_crt_benchmark.txt  gpu_full_pipeline_benchmark.txt  gpu_lll_benchmark_partial.txt  multi_rhs_cuda_benchmark.txt  sweep_breakdown.csv  sweep_vary_k.csv  sweep_vary_n.csv  table_breakdown.tex  table_vary_k.tex  table_vary_n.tex
swift/: Package.swift  (+2 more)
(+37 files in other folders)
