[package]
name = "parallel_lift_cli"
version = "0.1.0"
edition = "2021"
description = "CLI for parallel_lift ZK preprocessing benchmarks"
license = "MIT OR Apache-2.0"

[[bin]]
name = "parallel-lift"
path = "src/main.rs"

[dependencies]
parallel_lift_core = { path = "../parallel_lift_core" }
parallel_lift_cuda = { path = "../parallel_lift_cuda", optional = true }
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
parallel_lift_metal = { path = "../parallel_lift_metal" }

[features]
default = []
cuda = ["dep:parallel_lift_cuda"]
